kubernetes/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  labels:
    name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - www.momostore.ru
    - www.momostore.online
    secretName: app-tls
  rules:
  - host: www.momostore.ru   
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port: 
              number: 80
      - pathType: Prefix
        path: "/auth/whoami"
        backend:
          service:
            name: backend
            port: 
              number: 8081
      - pathType: Prefix
        path: "/products"
        backend:
          service:
            name: backend
            port: 
              number: 8081
      - pathType: Prefix
        path: "/categories"
        backend:
          service:
            name: backend
            port: 
              number: 8081          
  - host: www.momostore.online  
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: frontend
            port: 
              number: 80
      - pathType: Prefix
        path: "/auth/whoami"
        backend:
          service:
            name: backend
            port: 
              number: 8081
      - pathType: Prefix
        path: "/products"
        backend:
          service:
            name: backend
            port: 
              number: 8081
      - pathType: Prefix
        path: "/categories"
        backend:
          service:
            name: backend
            port: 
              number: 8081
